--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1894,6 +1894,13 @@
     <!-- Navigation Bar  -->
     <string name="navigation_bar_title">导航栏</string>
 
+    <string name="navigation_bar_show">导航栏开关</string>
+    <string name="hw_keys_title">物理按键</string>
+    <string name="key_menu_enabled">菜单键已启用</string>
+    <string name="key_back_enabled">返回键已启用</string>
+    <string name="key_home_enabled">主页键已启用</string>
+    <string name="navigation_bar_reboot_message">重启以生效</string>
+
     <string name="navigation_bar_help_text">1 - 点击锁定图标以开始编辑\n\n2 - 点击任何按键以指定或改变它的功能\n\n3 - 长按任何按键以重新排列按键顺序\n\n4 - 再次点击锁定图标将会保存您的改变\n\n5 - 如果您想还原为系统默认值，请点击重置键\n\n</string>
     <string name="navigation_bar_tips">&#8226; 一个按键只能拥有一个功能\n\n&#8226; Home 键的功能是不能改变的\n\n&#8226; 侧边按键的排列是不能改变的</string>
     <string name="navigation_bar_tips_title">一些提示</string>
