--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -2068,6 +2068,10 @@
     <string name="lockscreen_battery_status_title">电池状态</string>
     <string name="lockscreen_battery_status_charging">仅在充电时显示</string>
     <string name="lockscreen_battery_status_alwayson">总是显示</string>
+    <string name="lockscreen_clock_align_title">锁屏时钟对齐方式</string>
+    <string name="lockscreen_clock_align_left">靠左</string>
+    <string name="lockscreen_clock_align_center">居中</string>
+    <string name="lockscreen_clock_align_right">靠右</string>
 
     <!-- Profiles settings -->
     <string name="profiles_settings_title">场景模式</string>
