--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1891,6 +1891,12 @@
     <string name="navigation_bar_reset_message">您确定要删除目前的设置并还原为系统默认值？</string>
     <string name="navigation_bar_save_message">导航栏设置已保存</string>
     <string name="navigation_bar_reset_toast">导航栏设置已还原为系统默认值</string>
+    <string name="navigation_bar_menu_editable">可编辑</string>
+    <string name="navigation_bar_menu_locked">已锁定</string>
+    <string name="navigation_bar_edit_title">自定义导航栏</string>
+    <string name="navigation_bar_edit_summary">编辑按键布局</string>
+    <string name="navigation_bar_height">导航栏高度</string>
+    <string name="navigation_bar_height_48">48dp (默认)</string>
 
     <!-- Hardware keys -->
     <string name="hardware_keys_title">物理按键</string>
