--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1913,9 +1913,10 @@
     <string name="status_bar_toggle_brightness_summary">Juster lysstyrken ved at glide på tværs af statuslinjen</string>
     <string name="status_bar_toggle_info">Automatisk lysstyrke er aktiveret</string>
     <string name="status_bar_signal_text_title">Signalstyrke</string>
-    <string name="status_bar_signal_text_show_bars">Ikon (standard)</string>
+    <string name="status_bar_style_icon">Ikon</string>
+    <string name="status_bar_style_hidden">Skjult</string>
     <string name="status_bar_signal_text_show_text">Tekst</string>
-    <string name="status_bar_signal_text_hidden">Skjult</string>
+    <string name="status_bar_battery_status_percentage">Procent</string>
 
     <!-- Lock Screen Shortcuts -->
     <string name="lock_screen_title">Skærmlås</string>
