--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -231,6 +231,13 @@
     <string name="status_bar_signal_text_title">Signal GSM alternatif</string>
     <string name="status_bar_signal_text_show_bars">Icône</string>
     <string name="status_bar_signal_text_show_text">Texte</string>
+    <string name="status_bar_signal_text_title">Affichage du signal réseau</string>
+    <string name="status_bar_style_icon">Icône</string>
+    <string name="status_bar_style_hidden">Ne pas afficher</string>
+    <string name="status_bar_signal_text_show_text">Texte</string>
+    <string name="status_bar_battery_status_percentage">Pourcentage</string>
+    <string name="status_bar_battery_status_circle">Cercle</string>
+    <string name="status_bar_battery_status_circle_percentage">Cercle avec pourcentage</string>
 
     <!-- Power Widget, Haptic feedback #CM -->
     <string name="expanded_haptic_feedback_title">Retour haptique</string>
