--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -1918,8 +1918,10 @@ Schakel het scherm uit om de geselecteerde melding in actie te zien of annuleer 
     <string name="status_bar_signal_text_title">Opmaak signaalstatus</string>
     <string name="status_bar_signal_text_summary">Weergave van signaalstatus</string>
     <string name="status_bar_signal_text_show_bars">Icoon (standaard)</string>
+    <string name="status_bar_style_icon">Icoon (standaard)</string>
+    <string name="status_bar_style_hidden">Verborgen</string>
     <string name="status_bar_signal_text_show_text">Tekst</string>
-    <string name="status_bar_signal_text_hidden">Verborgen</string>
+    <string name="status_bar_battery_status_percentage">Percentage</string>
 
     <string name="lock_screen_title">Vergrendelscherm</string>
 
